styles added to header

--- a/index.html
+++ b/index.html
@@ -7,26 +7,31 @@
         <link rel="stylesheet" href="./assets/style.css">
     </head>
         <!------------------------------------------------------------->
-    <body>
+    <body alt="geometric shapes">
         <!--header/ navigation-->
-        <header id="home" class="header flex-row">
-            <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="bradley-kennett-76a164158" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/bradley-kennett-76a164158?trk=profile-badge">
-            <img src="./assets/images/linkedin icon.svg" alt="link to linkedin profile"></a></div>
-              
-            <nav>
-                <ul>
-                   <li><a href="#home">Home</a></li>
-                   <li><a href="#about-me">About Me</a></li>
-                   <li><a href="#resume">Resume</a></li>
-                   <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>    
-        </header>
+        <header class="flex-row">
+        <nav>    
+            <ul>
+                <li>
+                    <a href="#home">Home</a>
+                </li>
+                <li>
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#resume">Resume</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        </header>     
+
         <!--header/navigation end-->
         <!-------------------------------------------------------------->
         <!--hero-->
-        <section class="hero">
-            <img src="./assets/images/portfolio background.png" alt="geometric shapes">
+        <section id="home" class="hero">
             <div class="intro">
                 <p>Hello, I'm Bradley Kennett.
                 </br>
