--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./assets/style.css">
     </head>
         <!------------------------------------------------------------->
-    <body alt="geometric shapes">
+    <body alt="hexagon shapes">
         <!--header/ navigation-->
         <header class="flex-row">
         <nav>    
@@ -19,7 +19,7 @@
                     <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    <a href="#resume">Resume</a>
+                    <a href="#portfolio">Portfolio</a>
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
@@ -32,12 +32,20 @@
         <!-------------------------------------------------------------->
         <!--hero-->
         <section id="home" class="hero">
-            <div class="intro">
-                <p>Hello, I'm Bradley Kennett.
-                </br>
-                In the near future I will be a full-stack web developer.
-                </p>
+            <div>
+                <div>
+                <p>Hello, I'm Bradley Kennett.</p>
             </div>
+            <div>
+                <p>In the near future I will be a full-stack web developer.</p>
+            </div>
+            <div class="button">
+                <a href="#portfolio">
+                    <button> View My Work </button>
+                </a>
+            </div>
+            
+            
         </section>
         <!--hero end-->
         <!--------------------------------------------------------------->
@@ -102,7 +110,7 @@
         <!--end about me-->
         <!----------------------------------------------------------------------------->
         <!--resume begin-->
-        <section id="resume" class="resume flex-row">
+        <section id="portfolio" class="portfolio flex-row">
             <article class="work-history">
                 <iframe src="https://codechef27.github.io/run-buddy/"></iframe>
             </article>
