about-me-section-50%-styles

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <section id="home" class="hero">
             <div>
                 <div>
-                <p>Hello, I'm Bradley Kennett.</p>
+                <p>Hello, I'm <span style="color:#10d4a3f1;">Bradley Kennett.</span></p>
             </div>
             <div>
                 <p>In the near future I will be a full-stack web developer.</p>
             </div>
-            <div class="button">
+            <div class="view-my-work">
                 <a href="#portfolio">
-                    <button> View My Work </button>
+                    <button class="btn-1"> View My Work </button>
                 </a>
             </div>
             
@@ -51,15 +51,15 @@
         <!--------------------------------------------------------------->
         <!--about-me-->
         <main id="about-me" class="about-me-facts">
-            <div class=flex-row>
-                <h2 class="main-title">
+            <div class="flex-row  main-title">
+                <h2>
                     About Me
                 </h2>
             </div>
             <div class="fact">
                 <div class="fact-info">
                   <div class="fact-img">
-                    <img src="./assets/images/fast-speed.svg" alt="" />
+                    <img src="./assets/images/stopwatch-icon.svg" alt="" />
                   </div>
                   <div class="fact-text">
                       <h3>Quick</h3>
