about me styles

--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
                   </div>
                   <div class="fact-text">
                       <h3>Quick</h3>
-                    <p>Fast load times and lag free interaction is
-                    </br>
-                       is my top priority
+                    <p>Fast load times and lag free interaction is my top priority
                     </p>
                   </div>
                 </div>
@@ -75,9 +73,7 @@
                     </div>
                     <div class="fact-text">
                         <h3>Creative</h3>
-                        <p>I strive to create unique design layouts
-                        </br>
-                           for ease of use.
+                        <p>I strive to create unique design layouts for ease of use.
                         </p>
                     </div>
                 </div>
@@ -86,10 +82,8 @@
                         <img src="./assets/images/screen-pc-smart-phone-.svg" alt="">
                     </div>
                     <div class="fact-text">
-                        <h3>Responsive</h3>
-                        <p>My designs will scale to fit any device
-                        </br>
-                           big or small.
+                        <h3> Responsive</h3>
+                        <p>My designs will scale to fit any device big or small.
                         </p>
                     </div>
                 </div>
@@ -99,9 +93,7 @@
                     </div>
                     <div class="fact-text">
                         <h3>Dynamic</h3>
-                        <p>I have a strong dedication to making websites
-                        </br>
-                           come to life.
+                        <p>I have a strong dedication to making websites come to life.
                         </p>
                     </div>
                 </div>    
