portfolio style added

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!--------------------------------------------------------------->
         <!--about-me-->
         <main id="about-me" class="about-me-facts">
-            <div class="flex-row  main-title">
+            <div class="main-title">
                 <h2>
                     About Me
                 </h2>
@@ -63,7 +63,8 @@
                   </div>
                   <div class="fact-text">
                       <h3>Quick</h3>
-                    <p>Fast load times and lag free interaction is my top priority
+                    <p>Fast load times and lag free interaction</br>
+                        is my top priority
                     </p>
                   </div>
                 </div>
@@ -73,7 +74,8 @@
                     </div>
                     <div class="fact-text">
                         <h3>Creative</h3>
-                        <p>I strive to create unique design layouts for ease of use.
+                        <p>I strive to create unique design layouts</br>
+                            for ease of use.
                         </p>
                     </div>
                 </div>
@@ -83,7 +85,8 @@
                     </div>
                     <div class="fact-text">
                         <h3> Responsive</h3>
-                        <p>My designs will scale to fit any device big or small.
+                        <p>My designs will scale to fit any</br>
+                            device big or small.
                         </p>
                     </div>
                 </div>
@@ -93,7 +96,8 @@
                     </div>
                     <div class="fact-text">
                         <h3>Dynamic</h3>
-                        <p>I have a strong dedication to making websites come to life.
+                        <p>I have a strong dedication to making</br>
+                            websites come to life.
                         </p>
                     </div>
                 </div>    
@@ -102,18 +106,20 @@
         <!--end about me-->
         <!----------------------------------------------------------------------------->
         <!--resume begin-->
-        <section id="portfolio" class="portfolio flex-row">
+        <section id="portfolio" class="portfolio">
+            <h2>Recent Projects</h2>
             <article class="work-history">
-                <iframe src="https://codechef27.github.io/run-buddy/"></iframe>
+                <iframe src="https://codechef27.github.io/run-buddy/">
+                </iframe>
             </article>
             <article class="work-history">
-                <iframe src="coming-soon"></iframe>
+                <iframe src="coming-soon">coming-soon!</iframe>
             </article>
             <article class="work-history">
-                <iframe src="coming-soon"></iframe>
+                <iframe src="coming-soon">coming-soon!</iframe>
             </article>
             <article class="work-history">
-                <iframe src="coming-soon"></iframe>
+                <iframe src="coming-soon">coming-soon!</iframe>
             </article>
         </section>
         <!--resume end-->
