--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <!----------------------------------------------------------------------------->
         <!--resume begin-->
         <section id="portfolio" class="portfolio">
-            <h2>Recent Projects</h2>
+            <h2 class="section-title"> Recent Projects</h2>
             <article class="work-history">
                 <iframe src="https://codechef27.github.io/run-buddy/">
                 </iframe>
@@ -126,26 +126,25 @@
         <!------------------------------------------------------------------------------->  
         <!--contact form-->
         <section id="contact" class="contact-form">
-            <div class="flex-row">
+            <div>
                 <h3>Contact</h3>
                 <address>
-                    Have a question</br>
-                    or want to email me</br>
-                    E: <a href="mailto:bradleyjkennett@gmail.com">bradleyjkennett@gmail.com</a>
+                    Have a question or want to email me? <a href="mailto:bradleyjkennett@gmail.com">bradleyjkennett@gmail.com</a>
                 </address>
                 <form>
-                <label for="contact-name">Name</label>
-                <input type="text" id="contact-name" placeholder="Your Name" />
+                <label for="contact-name"></label>
+                <input type="text" id="contact-name" placeholder="Name" />
 
-                <label for="contact-email">Enter email</label>
-                <input type="text" id="contact-email" placeholder="email" />
+                <label for="contact-email"></label>
+                <input type="text" id="contact-email" placeholder="Enter email" />
 
-                <label for="contact-message">Your Message</label>
-                <textarea id="contact-message" placeholder="Message"></textarea>
+                <label for="contact-message"></label>
+                <textarea class="text-area" id="contact-message" placeholder="Your message"></textarea>
 
                 <button type="submit">Submit</button>
                 </form>
-            </div>  
+            </div> 
+        </section>
         <footer>
             
             <h4>&copy; 2022 Bradley Kennett</h4>
