--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!------------------------------------------------------------->
     <body alt="hexagon shapes">
         <!--header/ navigation-->
-        <header class="flex-row">
+        <header>
         <nav>    
             <ul>
                 <li>
@@ -108,17 +108,17 @@
         <!--resume begin-->
         <section id="portfolio" class="portfolio">
             <h2 class="section-title"> Recent Projects</h2>
-            <article class="work-history">
+            <article>
                 <iframe src="https://codechef27.github.io/run-buddy/">
                 </iframe>
             </article>
-            <article class="work-history">
+            <article>
                 <iframe src="coming-soon">coming-soon!</iframe>
             </article>
-            <article class="work-history">
+            <article>
                 <iframe src="coming-soon">coming-soon!</iframe>
             </article>
-            <article class="work-history">
+            <article>
                 <iframe src="coming-soon">coming-soon!</iframe>
             </article>
         </section>
