styles add to porfolio sec.

--- a/index.html
+++ b/index.html
@@ -109,19 +109,32 @@
         <section id="portfolio" class="portfolio">
             <h2 class="section-title"> Recent Projects</h2>
             <article>
-                <iframe src="https://codechef27.github.io/run-buddy/">
-                </iframe>
+                <div>
+                    <iframe src="https://codechef27.github.io/run-buddy/"></iframe>
+                    <button type="button" onclick="location.href='https://codechef27.github.io/run-buddy/'">Visit Run Buddy</button>
+                </div>
+                <div>
+                    <iframe src="coming-soon"></iframe>
+                    <button type="button" onclick="location.href=''">Coming Soon!</button>
+                </div>
+                <div>
+                    <iframe src="coming-soon"></iframe>
+                    <button type="button" onclick="location.href=''">Coming Soon!</button>
+                </div>    
+                <div>
+                    <iframe src="coming-soon"></iframe>
+                    <button type="button" onclick="location.href=''">Coming Soon!</button>
+                </div>
+                <div>
+                    <iframe src="coming-soon"></iframe>
+                    <button type="button" onclick="location.href=''">Coming Soon!</button>
+                </div>
+                <div>
+                    <iframe src="coming-soon"></iframe>
+                    <button type="button" onclick="location.href=''">Coming Soon!</button>
+                </div>
             </article>
-            <article>
-                <iframe src="coming-soon">coming-soon!</iframe>
-            </article>
-            <article>
-                <iframe src="coming-soon">coming-soon!</iframe>
-            </article>
-            <article>
-                <iframe src="coming-soon">coming-soon!</iframe>
-            </article>
-        </section>
+        </section> 
         <!--resume end-->
         <!------------------------------------------------------------------------------->  
         <!--contact form-->
