profile pic added

--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <body alt="hexagon shapes">
         <!--header/ navigation-->
         <header>
-        <nav>    
-            <ul>
-                <li>
-                    <a href="#home">Home</a>
-                </li>
-                <li>
-                    <a href="#about-me">About Me</a>
-                </li>
-                <li>
-                    <a href="#portfolio">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-        </nav>
+            <nav>    
+                <ul>
+                    <li>
+                       <a href="#home">Home</a>
+                    </li>
+                    <li>
+                       <a href="#about-me">About Me</a>
+                    </li>
+                    <li>
+                       <a href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                       <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </nav>
         </header>     
 
         <!--header/navigation end-->
@@ -100,6 +100,9 @@
                             websites come to life.
                         </p>
                     </div>
+                </div>
+                <div class="profile-pic-placement">
+                    <img class="profile-pic" src="./assets/images/portfolio-pic.jpg"></img>
                 </div>    
              </div>
         </main>
@@ -110,7 +113,7 @@
             <h2 class="section-title"> Recent Projects</h2>
             <article>
                 <div>
-                    <iframe src="https://codechef27.github.io/run-buddy/"></iframe>
+                    <iframe src="https://codechef27.github.io/run-buddy/"allowfullscreen=""></iframe>
                     <button type="button" onclick="location.href='https://codechef27.github.io/run-buddy/'">Visit Run Buddy</button>
                 </div>
                 <div>
@@ -144,6 +147,7 @@
                 <address>
                     Have a question or want to email me? <a href="mailto:bradleyjkennett@gmail.com">bradleyjkennett@gmail.com</a>
                 </address>
+              
                 <form>
                 <label for="contact-name"></label>
                 <input type="text" id="contact-name" placeholder="Name" />
