--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
             <article>
                 <div>
                     <img class="iframe" src="./assets/images/game-reviews.png">
-                    <button type="button" onclick="location.href='https://codechef27.github.io/pc-game-reviews/'">Game Reviews</button>
+                    <button type="button" onclick="location.href='https://codechef27.github.io/pc-game-reviews/'">Game-Reviews</button>
                 </div>
                 <div>
-                    <iframe src="coming-soon"></iframe>
-                    <button type="button" onclick="location.href=''">Coming Soon!</button>
+                    <img class="iframe" src="./assets/images/homepage-light.png"></iframe>
+                    <button type="button" onclick="location.href='https://the-front-yard.herokuapp.com/'">The-Front-Yard</button>
                 </div>
                 <div>
                     <iframe src="coming-soon"></iframe>
